# attentional_slam

./: CMakeLists.txt  nodelet_plugins.xml  package.xml
cfg/: vocus_params.cfg
launch/: cam_start.launch
src/: VOCUS2.cpp  VOCUS2.h  compiling_error.txt  integrate.cuh  integrate_and_fire_node.cpp  integrate_and_fire_nodelet.cpp  integrate_and_fire_nodelet.h  main.cpp  odometry_node.cpp  odometry_nodelet.cpp  odometry_nodelet.h
src/cuda_ext/: VOCUS2_cuda_ext.cpp  VOCUS2_cuda_ext.h  main_cuda_ext.cpp
src/results/: concat.sh  concat2.sh
src/results/energy_res/: concat.sh  execute_concat.sh
src/results/gabor_res/: concat.sh
src/results/gabors/: concat.sh
src/results/square_res/: concat.sh  execute_concat.sh
src/results/weights/: feature_orientation_weights_0.txt  feature_orientation_weights_1.txt  feature_orientation_weights_2.txt  feature_orientation_weights_3.txt  feature_orientation_weights_4.txt  feature_orientation_weights_5.txt  feature_orientation_weights_6.txt  feature_orientation_weights_7.txt  map_0.txt  map_1.txt  map_2.txt  map_3.txt  map_4.txt  map_5.txt  map_6.txt  map_7.txt  off_on_L_weights_0.txt  off_on_L_weights_1.txt  off_on_L_weights_2.txt  off_on_L_weights_3.txt  off_on_L_weights_4.txt  off_on_L_weights_5.txt  off_on_gabor0_weights_0.txt  off_on_gabor0_weights_1.txt  off_on_gabor0_weights_2.txt  off_on_gabor0_weights_3.txt  off_on_gabor0_weights_4.txt  off_on_gabor0_weights_5.txt  off_on_gabor135_weights_0.txt  off_on_gabor135_weights_1.txt  off_on_gabor135_weights_2.txt  off_on_gabor135_weights_3.txt  off_on_gabor135_weights_4.txt  off_on_gabor135_weights_5.txt  on_off_L_weights_0.txt  on_off_L_weights_1.txt  on_off_L_weights_2.txt  on_off_L_weights_4.txt  on_off_L_weights_5.txt  on_off_gabor0_weights_0.txt  (+19 more)
